--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>MemoMate</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/Favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/Favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/Favicon/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/Favicon/android-chrome-192x192.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="/Favicon/android-chrome-512x512.png" />
+    <link rel="manifest" href="/Favicon/site.webmanifest" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -36,9 +42,7 @@
               aria-label="Search"
               id="searchTxt"
             />
-            <button class="btn btn-light" type="submit">
-              Search
-            </button>
+            <button class="btn btn-light" type="submit">Search</button>
           </form>
         </div>
       </div>
@@ -63,8 +67,7 @@
       <hr />
       <h1>Your Notes</h1>
       <hr />
-      <div class="row container-fluid" id="yourNotes">
-      </div>
+      <div class="row container-fluid" id="yourNotes"></div>
     </div>
     <script src="/app.js"></script>
     <script
