--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>MemoMate</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/Favicon/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/Favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/Favicon/favicon-16x16.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/Favicon/android-chrome-192x192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="/Favicon/android-chrome-512x512.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/Favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/Favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/Favicon/favicon-16x16.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/Favicon/android-chrome-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="/Favicon/android-chrome-512x512.png"
+    />
     <link rel="manifest" href="/Favicon/site.webmanifest" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -52,22 +76,30 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Add a note</h5>
-          <div class="form-floating">
+          <div class="input-group mb-1">
+            <input
+              class="form-control"
+              placeholder="Title"
+              id="addTitle"
+              type="text"
+              aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-default"
+            />
+          </div>
             <textarea
               class="form-control"
-              placeholder="Leave a comment here"
+              placeholder="Description"
               id="addTxt"
               style="height: 100px"
             ></textarea>
-            <label for="addTxt">Type here.</label>
+            <button id="addBtn" class="btn btn-primary">Add note</button>
           </div>
-          <button id="addBtn" class="btn btn-primary">Add note</button>
         </div>
+        <hr />
+        <h1>Your Notes</h1>
+        <hr />
+        <div class="row container-fluid" id="yourNotes"></div>
       </div>
-      <hr />
-      <h1>Your Notes</h1>
-      <hr />
-      <div class="row container-fluid" id="yourNotes"></div>
     </div>
     <script src="/app.js"></script>
     <script
